# hulo

./: .gitignore  .goreleaser.yaml  .md  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  a.bat  cursor_handling_variable_initialization.md  go.mod  go.sum  magefile.go  main.go  setup.bat  setup.sh
.github/workflows/: codecov.yml
cmd/: hulo.go
cmd/hlpm/: build.go  cache.go  config.go  hlpm.go  init.go  install.go  list.go  pack.go  publish.go  run.go  uninstall.go  version.go
cmd/hulo/: hulo.go
cmd/hulo-repl/: config.yaml  hulo-repl.go  hulo-repl.yaml
cmd/meta/: meta.go
cmd/repl/: README.md  main.go  options.go  suggest.go
core/ast/: expr.hl  index.hl
core/builtin/: list_test.hl  triple_test.hl  type_posix.hl
core/crypto/: crypto.hl
core/fs/: index.hl
core/log/: log.hl  log_test.hl
core/math/: math.hl
core/net/: net_test.hl
core/os/: constant.hl  mem.hl  service.hl
core/pkg/: dm.hl
core/runtime/: metadata_test.hl
core/testify/: testify_test.hl
core/time/: constant.hl  date.hl  date_test.hl  index.hl
examples/: class.hl  comment.hl  comp.hl  do-while.hl  enum.hl  for-in.hl  for-of.hl  func.hl  if.hl  import.hl  input.hl  match.hl  math.hl  number_demo.hl  preprocessor_demo.hl  scope.hl  target.hl  while.hl
internal/ast/: ast.go  ast_test.go  (+1 more)
tools/: build.go  clean.go  doctor.go  format.go  gen.go  lint.go  pack.go  release.go  setup.go  test.go  tools.go
tools/release/templates/pypi/: MANIFEST.in  pyproject.toml  setup.cfg
tools/release/templates/pypi/hulo/: cli.py
(+504 files in other folders)
