[project]
name = "hulo"
version = "1.2.3"
description = "A CLI tool written in Go, wrapped for Python"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
hulo = "hulo.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
